fix(cards):#MEN-288 fix card on mobile

--- a/scss/moodle/atto_templates.scss
+++ b/scss/moodle/atto_templates.scss
@@ -459,7 +459,7 @@
 
 @media (max-width: $size-sm) {
   
-      width: 16rem !important;
+      width: 14rem !important;
   
 }
 
